--- a/ThereYet/Base.lproj/LaunchScreen.storyboard
+++ b/ThereYet/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,13 +17,36 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_login" translatesAutoresizingMaskIntoConstraints="NO" id="Jac-UJ-rt5">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_main_logo" translatesAutoresizingMaskIntoConstraints="NO" id="wZA-cM-aDL">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="a4i-5K-X9q"/>
+                                    <constraint firstAttribute="width" constant="200" id="fmG-u9-KZB"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wZA-cM-aDL" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ACW-it-E4j"/>
+                            <constraint firstItem="Jac-UJ-rt5" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="Qgb-Fe-gMI"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Jac-UJ-rt5" secondAttribute="bottom" id="V04-yB-oJE"/>
+                            <constraint firstItem="wZA-cM-aDL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ZU6-Nw-gwb"/>
+                            <constraint firstItem="Jac-UJ-rt5" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="kkr-MT-b62"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Jac-UJ-rt5" secondAttribute="trailing" constant="-20" id="s4Y-hX-SUY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-83" y="317"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg_login" width="375" height="667"/>
+        <image name="ic_main_logo" width="225" height="225"/>
+    </resources>
 </document>
