--- a/ThereYet/Main.storyboard
+++ b/ThereYet/Main.storyboard
@@ -5,6 +5,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="SignPainter.otf">
+            <string>SignPainter-HouseScript</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -15,36 +20,109 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FAg-eI-LAG">
-                                <rect key="frame" x="20" y="20" width="305" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_login" translatesAutoresizingMaskIntoConstraints="NO" id="VOH-qB-Wv6">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FAg-eI-LAG" customClass="BorderBottomTextField" customModule="ThereYet" customModuleProvider="target">
+                                <rect key="frame" x="55" y="372" width="305" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WmB-1l-nRi">
-                                <rect key="frame" x="20" y="58" width="305" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WmB-1l-nRi" customClass="BorderBottomTextField" customModule="ThereYet" customModuleProvider="target">
+                                <rect key="frame" x="55" y="410" width="305" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WKM-Jx-xJY">
-                                <rect key="frame" x="20" y="96" width="38" height="30"/>
-                                <state key="normal" title="Login"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WKM-Jx-xJY">
+                                <rect key="frame" x="55" y="448" width="305" height="35"/>
+                                <color key="backgroundColor" red="0.086274509803921567" green="0.52941176470588236" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="WQ5-UH-tyo"/>
+                                </constraints>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="btnLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Be5-cR-dhv"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="apt-Rg-1wJ">
-                                <rect key="frame" x="20" y="128" width="163" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="apt-Rg-1wJ">
+                                <rect key="frame" x="126" y="499" width="163" height="30"/>
                                 <state key="normal" title="Fill with temp login data"/>
                                 <connections>
                                     <action selector="fuckItShipIt:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FIc-eY-fj1"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_main_logo" translatesAutoresizingMaskIntoConstraints="NO" id="NEQ-QU-kjK">
+                                <rect key="frame" x="107" y="34" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="5p8-Fy-kBb"/>
+                                    <constraint firstAttribute="height" constant="200" id="oCv-An-pJT"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ThereYet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFs-1a-jMB">
+                                <rect key="frame" x="117" y="258" width="181" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="owm-35-JQH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="SignPainter-HouseScript" family="SignPainter" pointSize="50"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="olc-V5-JF1">
+                                <rect key="frame" x="55" y="304" width="304" height="60"/>
+                                <string key="text">Sign in with your 
+ThereYet or Pearson’s Account</string>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FlW-CI-0AL">
+                                <rect key="frame" x="144" y="698" width="126" height="30"/>
+                                <state key="normal" title="Create an account">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FAg-eI-LAG" firstAttribute="top" secondItem="olc-V5-JF1" secondAttribute="bottom" constant="8" symbolic="YES" id="1E1-Xe-mR5"/>
+                            <constraint firstItem="olc-V5-JF1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="35" id="27y-NE-rct"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VOH-qB-Wv6" secondAttribute="trailing" constant="-20" id="36W-JA-Jvx"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="VOH-qB-Wv6" secondAttribute="bottom" id="42e-g5-Sft"/>
+                            <constraint firstItem="WKM-Jx-xJY" firstAttribute="leading" secondItem="WmB-1l-nRi" secondAttribute="leading" id="4X6-k5-AmR"/>
+                            <constraint firstItem="FlW-CI-0AL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="88h-h0-DaX"/>
+                            <constraint firstItem="NEQ-QU-kjK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CtF-Dt-Clj"/>
+                            <constraint firstItem="lFs-1a-jMB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="97" id="Fls-ja-2D0"/>
+                            <constraint firstItem="NEQ-QU-kjK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="14" id="Nob-bH-UKc"/>
+                            <constraint firstItem="FAg-eI-LAG" firstAttribute="top" secondItem="lFs-1a-jMB" secondAttribute="bottom" constant="65" id="OJ4-75-9VV"/>
+                            <constraint firstItem="WKM-Jx-xJY" firstAttribute="top" secondItem="WmB-1l-nRi" secondAttribute="bottom" constant="8" symbolic="YES" id="Par-h8-zFU"/>
+                            <constraint firstItem="VOH-qB-Wv6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="REQ-R3-H8K"/>
+                            <constraint firstItem="WKM-Jx-xJY" firstAttribute="centerX" secondItem="apt-Rg-1wJ" secondAttribute="centerX" id="VfN-Yn-PPq"/>
+                            <constraint firstItem="WmB-1l-nRi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZCu-vm-VtU"/>
+                            <constraint firstItem="olc-V5-JF1" firstAttribute="top" secondItem="NEQ-QU-kjK" secondAttribute="bottom" constant="70" id="aU5-h0-4BG"/>
+                            <constraint firstItem="apt-Rg-1wJ" firstAttribute="top" secondItem="WKM-Jx-xJY" secondAttribute="bottom" constant="16" id="bJA-Ts-iZ6"/>
+                            <constraint firstItem="lFs-1a-jMB" firstAttribute="top" secondItem="NEQ-QU-kjK" secondAttribute="bottom" constant="24" id="ch7-KO-9gD"/>
+                            <constraint firstItem="FAg-eI-LAG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hFt-Rm-bVo"/>
+                            <constraint firstItem="VOH-qB-Wv6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="hle-2A-eKf"/>
+                            <constraint firstItem="olc-V5-JF1" firstAttribute="leading" secondItem="FAg-eI-LAG" secondAttribute="leading" id="kQj-AI-URb"/>
+                            <constraint firstItem="WKM-Jx-xJY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nea-cb-sFp"/>
+                            <constraint firstItem="WmB-1l-nRi" firstAttribute="leading" secondItem="FAg-eI-LAG" secondAttribute="leading" id="sYc-Mj-onZ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FlW-CI-0AL" secondAttribute="bottom" constant="8" id="tEB-jC-PAR"/>
+                            <constraint firstItem="olc-V5-JF1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="u5X-f6-obo"/>
+                            <constraint firstItem="WmB-1l-nRi" firstAttribute="top" secondItem="FAg-eI-LAG" secondAttribute="bottom" constant="8" symbolic="YES" id="wqO-Ez-Rne"/>
+                            <constraint firstItem="lFs-1a-jMB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yIt-aM-x6v"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <outlet property="textFieldPassword" destination="WmB-1l-nRi" id="Sen-Tk-vdG"/>
                         <outlet property="textFieldUsername" destination="FAg-eI-LAG" id="93j-m6-SlA"/>
@@ -227,7 +305,7 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uQE-wn-qH4" id="WDU-Rf-OyA">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calculus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWK-2X-hNk">
@@ -701,7 +779,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Starts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTW-IU-2Ho">
                                                     <rect key="frame" x="15" y="12" width="44" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="None" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROX-dh-8EU">
@@ -741,7 +819,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ch-jN-62M">
                                                     <rect key="frame" x="15" y="12" width="36" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="None" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Faj-Mn-TIt">
@@ -945,8 +1023,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bg_login" width="375" height="667"/>
         <image name="ic_check" width="60" height="60"/>
         <image name="ic_courses" width="60" height="60"/>
+        <image name="ic_main_logo" width="225" height="225"/>
         <image name="menu.png" width="20" height="15"/>
     </resources>
 </document>
